--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "framer-motion": "^6.2.8",
     "husky": "^7.0.4",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
