--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^8.19.5",
+    "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -23,6 +25,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
     "react-tsparticles": "^1.42.3",
+    "three": "^0.139.0",
     "tsparticles-preset-fire": "^1.42.3",
     "web-vitals": "^2.1.4"
   },
