--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "private": true,
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
     "@react-three/drei": "^8.19.5",
     "@react-three/fiber": "^7.0.26",
     "@reduxjs/toolkit": "^1.8.0",
@@ -24,8 +25,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-three-fiber": "^6.0.13",
     "react-tsparticles": "^1.42.3",
-    "three": "^0.139.0",
+    "three": "^0.139.1",
     "tsparticles-preset-fire": "^1.42.3",
     "web-vitals": "^2.1.4"
   },
