--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "husky": "^7.0.4",
+    "nice-color-palettes": "^3.0.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-spring": "^9.4.4",
     "react-three-fiber": "^6.0.13",
     "react-tsparticles": "^1.42.3",
     "three": "^0.139.1",
