--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^6.2.8",
     "husky": "^7.0.4",
     "nice-color-palettes": "^3.0.0",
+    "node-forge": "^1.3.1",
+    "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
