--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-spring": "^9.4.4",
     "react-three-fiber": "^6.0.13",
     "react-tsparticles": "^1.42.3",
+    "styled-components": "^5.3.5",
     "three": "^0.139.1",
     "tsparticles-preset-fire": "^1.42.3",
     "web-vitals": "^2.1.4"
