--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^6.0.0-0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
