--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "async": "^3.2.3",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "husky": "^7.0.4",
